# mpl_styler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: plot_examples.py  style_showcase.py
examples/saving/: how_to_save.py
src/komorebi_mpl/: __init__.py
src/komorebi_mpl/functions/: night_wave_func.py
src/komorebi_mpl/styles/: komorebi.mplstyle  sci_faded.mplstyle  sci_pub.mplstyle  sci_pure.mplstyle  solarized.mplstyle
src/mpl_styler/: __init__.py
src/mpl_styler/functions/: night_wave_func.py
src/mpl_styler/styles/: blueprint.mplstyle  earth.mplstyle  minimal.mplstyle  night_wave.mplstyle  sci_bleak.mplstyle  sci_print.mplstyle  sci_pure.mplstyle
