[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "komorebi_mpl"
version = "0.0.2"
description = "MPL Styler"
authors = [{ name = "Sergei Kulkov", email = "sergei.kulkov23@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.22.4",
]

[tool.setuptools.packages.find]
where = ["src"]
